feat: Implement factory detail page

--- a/src/main/resources/static/css/factory.css
+++ b/src/main/resources/static/css/factory.css
@@ -1,14 +1,62 @@
-#factory_detail {
-    background: lightgoldenrodyellow;
-}
-
 .factory_thumb {
-    float : left;
-    width: 500px;
-    height: 500px;
-    background: lightpink;
+    float: left;
+    width: 50%;
+    height: 100%;
 }
 
 .factory_info {
-    float: right;
+    display: inline-block;
+    width: 49%;
+    height:100%;
+}
+
+.factory_info h3 {
+    padding-left: 10px;
+}
+
+.factory_info table {
+    width: 100%;
+}
+
+.factory_info td {
+    padding: 5px 10px;
+}
+
+.factory_summary {
+    width:100%;
+    height: 200px;
+    line-height: 40px;
+
+    margin-bottom: 80px;
+}
+
+.info_bind {
+    width:80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.factory_price {
+    width: 100%;
+    text-align: center;
+}
+
+.price_table {
+    min-width:fit-content;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.price_table, #warning_noPrice {
+    margin-top: 10px;
+}
+
+.price_table, .price_table th, .price_table td {
+    border: 1px black solid;
+    border-collapse: collapse;
+}
+
+.price_table td {
+    padding: 5px 10px;
 }
