--- a/src/main/resources/static/css/default.css
+++ b/src/main/resources/static/css/default.css
@@ -19,6 +19,10 @@
     list-style: none;
 }
 
+a:link, a:visited, a:hover, a:active {
+    color: black;
+}
+
 header, footer {
     background: lightcoral;
 }
@@ -30,6 +34,7 @@ header {
 body {
     font-family: 'Pretendard-Regular';
     width: 100%;
+    min-width: 620px;
     height: auto;
     background: #fff;
 }
@@ -41,8 +46,9 @@ body {
 }
 
 nav {
+    width: 100%;
     height: 50px;
-    margin: 10px 10%;
+    margin: 10px 0;
 }
 
 .nav_list {
