feat: Change DB(to MariaDB) and Entity

--- a/src/main/resources/templates/factory/factoryList.html
+++ b/src/main/resources/templates/factory/factoryList.html
@@ -47,8 +47,8 @@
         </div>
         <div id="content_grid">
             <div id="search">
-                <form action="/factory" method="get">
-                    <input type="search" id="query">
+                <form action="/factory/search" method="get">
+                    <input type="search" id="query" name="query">
                     <button type="submit" class="btn_search">
                         <span class="material-symbols-outlined">search</span>
                     </button>
