--- a/src/main/resources/templates/factory/factoryDetail.html
+++ b/src/main/resources/templates/factory/factoryDetail.html
@@ -30,12 +30,18 @@
                         </tr>
                         <tr>
                             <td>위챗 ID</td>
-                            <td th:unless="${factory.get().wechat == null}"><span th:text="${factory.get().wechat}"/></td>
+                            <td th:unless="${factory.get().wechat == null}">
+                                    <span th:text="${factory.get().wechat}"/>
+                            </td>
                             <td th:if="${factory.get().wechat == null}"><span th:text="X"/></td>
                         </tr>
                         <tr>
                             <td>트위터</td>
-                            <td th:unless="${factory.get().twitter == null}"><span th:text="${factory.get().twitter}"/></td>
+                            <td th:unless="${factory.get().twitter == null}">
+                                <a href="https://twitter.com/" th:attrappend="href=${factory.get().twitter}">
+                                    <span th:text="${factory.get().twitter}"/>
+                                </a>
+                            </td>
                             <td th:if="${factory.get().twitter == null}"><span th:text="X"/></td>
                         </tr>
                     </table>
