feat: Implement frame page

--- a/src/main/resources/templates/factory/factoryList.html
+++ b/src/main/resources/templates/factory/factoryList.html
@@ -61,7 +61,7 @@
                         <th:block th:if="${#lists.size(factoryList)} > 0" th:each="factory:${factoryList}">
                             <li class="factory_item" th:id="factory_ + ${factory.id}">
                                 <div class="thumbnail">
-                                    <a href="/factory/" th:attrappend="href=${factory.id}">
+                                    <a href="">
                                         <img class="factory_thumb">
                                     </a>
                                 </div>
