--- a/src/main/resources/static/css/default.css
+++ b/src/main/resources/static/css/default.css
@@ -121,6 +121,7 @@ nav {
     width: 130px;
     height:130px;
     margin: auto;
+    object-fit: cover;
 }
 
 .description {
@@ -129,6 +130,7 @@ nav {
 
 #search {
     text-align: right;
+    margin-bottom: 20px;
 }
 
 .btn_search {
